--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -77,7 +77,7 @@ body {
     }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:740px) {
     .main__section {
         flex-direction: column;
     }
@@ -91,12 +91,16 @@ body {
         flex-grow: 1;
     }
 
+    .grid__container .horarios {
+        grid-column: 1 / 4;
+    }
+
     .about__us .about__us__image {
         margin-left: 0px;
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 515px) {
 
     .secondary__section {
         display: grid;
@@ -110,17 +114,23 @@ body {
     .niveles {
         flex-wrap: wrap;
     }
-}
 
-@media screen and (max-width:320px) {
     header .navbar {
+        flex-direction: column;
         flex-wrap: wrap;
     }
 
-    .about__us .about__us__image {
-        width: 300px;
+    .navbar .logo {
+        margin-top: 1em;
     }
-    
+
+    .grid__container .libertad {
+        grid-column: 1 / 4;
+    }
+
+    .grid__container .estudiantes {
+        grid-column: 1 / 4;
+    }
 }
 
 /* Helpers */
@@ -274,11 +284,16 @@ header .navbar__item {
 
 /* Secondary section */
 
+.grid__container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
 .secondary__section {
     justify-content: space-evenly;
     align-items: center;
     margin: 2rem;
-    border-radius: 7%;
+    border-radius: 25px;
     box-shadow: 3px 3px 10px;
 
 }
